force-app/main/default/objects/Rack_Stock__c/Rack_Stock__c.object-meta.xml
<CustomObject>
    <label>Rack Stock</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Rack Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rack Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>