force-app/main/default/objects/Rack_Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Rack Stocks</relationshipLabel>
    <relationshipName>Rack_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>